Fix: added 100% to footer wrapper to stop wrapping when fewer nav items

--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -26,6 +26,7 @@
     }
   }
   &__navlist--wrapper{
+    width:100%;
     display:grid;
     grid-template-columns: var(--twelve-column-grid);
   }
